<resources>
    <string name="app_name">Park_Tamai</string>
    <string name="genie_info">Geunhee Park, A01196275</string>
    <string name="reo_info">Reo Tamai, A01224716</string>
    <string name="case_by_month_year">Case by month &amp; year</string>
    <string name="case_by_health_authority">Case by health authority</string>
    <string name="case_by_gender">Case by gender</string>
    <string name="case_by_age_group">Case by age group</string>
    <string name="find">Find</string>
    <string name="year">Year</string>
    <string name="month">Month</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">LOGIN</string>
    <string name="create_new_account">Create new account</string>

    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="less10">&lt;10</string>
    <string name="tenTo">10-19</string>
    <string name="twentyTo">20-29</string>
    <string name="thirtyTo">30-39</string>
    <string name="fortyTo">40-49</string>
    <string name="fiftyTo">50-59</string>
    <string name="sixtyTo">60-69</string>
    <string name="seventyTo">70-79</string>
    <string name="eightyTo">80-89</string>
    <string name="ninetyTo">90+</string>
    <string name="unknown">unknown</string>
</resources>