<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/logout"
            android:layout_marginEnd="@dimen/space_s"
            android:layout_marginTop="@dimen/space_s"
            app:icon="@drawable/exit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/space_l"
            android:layout_marginBottom="@dimen/space_l">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genie_info"
                android:textSize="@dimen/text_m"/>

            <TextView
                android:id="@+id/stud2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reo_info"
                android:textSize="@dimen/text_m"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/space_l"
            android:layout_marginEnd="@dimen/space_l"
            android:layout_marginTop="@dimen/space_l">
            <Button
                android:id="@+id/btn_month_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/case_by_month_year"/>

            <Button
                android:id="@+id/btn_ha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/case_by_health_authority"/>
            <Button
                android:id="@+id/btn_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/case_by_gender"/>
            <Button
                android:id="@+id/btn_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/case_by_age_group"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>