<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/space_l">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".age.byAge">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:useDefaultMargins="true"
                android:columnCount="2">

                <TextView
                    android:id="@+id/less10Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/less10"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/less10Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/twentyToLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_gravity="start"
                    android:text="@string/twentyTo"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/twentyToValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textSize="@dimen/text_m"
                    tools:layout_editor_absoluteX="24dp"
                    tools:layout_editor_absoluteY="55dp" />

                <TextView
                    android:id="@+id/thirtyToLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/thirtyTo"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/thirtyToValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/fortyToLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/fortyTo"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/fortyToValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/fiftyToLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/fiftyTo"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/fiftyToValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/sixtyToLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/sixtyTo"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/sixtyToValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/seventyToLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/seventyTo"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/seventyToValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/eightyToLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/eightyTo"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/eightyToValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/ninetyToLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/ninetyTo"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/ninetyToValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/unknownLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/unknown"
                    android:textSize="@dimen/text_m"/>

                <TextView
                    android:id="@+id/unknownValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textSize="@dimen/text_m"/>

            </GridLayout>

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/ageProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="visible"/>

    </RelativeLayout>

</ScrollView>