<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".date.byDate">

    <ProgressBar
        android:id="@+id/dateProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_l"
        android:layout_marginBottom="@dimen/space_l"
        android:layout_marginRight="@dimen/space_s"
        android:layout_marginLeft="@dimen/space_s">

        <EditText
            android:id="@+id/year_field"
            android:layout_width="@dimen/text_input_width"
            android:layout_height="@dimen/text_input_height"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/year"
            android:inputType="number" />

        <EditText
            android:id="@+id/month_field"
            android:layout_width="@dimen/text_input_width"
            android:layout_height="@dimen/text_input_height"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/month"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dateRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_blue1"
        android:layout_marginLeft="@dimen/space_s"
        android:layout_marginRight="@dimen/space_s"/>
</LinearLayout>