<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".byGender"
    android:layout_marginTop="@dimen/space_l">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:useDefaultMargins="true"
            android:columnCount="2">

            <TextView
                android:id="@+id/femaleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/female"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="11dp" />

            <TextView
                android:id="@+id/femaleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="11dp" />

            <TextView
                android:id="@+id/maleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/male"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="11dp" />

            <TextView
                android:id="@+id/maleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="11dp" />

            <TextView
                android:id="@+id/unknownLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/unknown"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="110dp"
                tools:layout_editor_absoluteY="627dp" />

            <TextView
                android:id="@+id/unknownValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="55dp" />
        </GridLayout>
        <ProgressBar
            android:id="@+id/genderProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="visible"/>
    </RelativeLayout>
</RelativeLayout>